@@ -174,3 +174,4 @@ v 2.0:
 	- GroupManager will now generate it's own log (in the GM folder) to keep things tidy, but also to account of those players unable to find/access their server.log.
 	- Startup errors will now lock out ALL commands other than '/manload'
 	- Fix 'manuadd' to use the default or selected world (via 'manselect'), if the world is not specified in the command.
+	- Expand GlobalGroups.yml and groups.yml to cover the VanishNoPacket plugin. Demonstrating how to negate and add nodes when using the '*' permission with inheritance.
